fixed portfolio card alignment and css

--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -39,7 +39,7 @@ body{
 }
 
 .card-img-top {
-    width: 400px;
+    width: 100%;
     height: 400px;
 }
 
